--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -21,5 +21,6 @@
   <p>
     <button ion-button color="primary" menuToggle>Toggle Menu</button>
   </p>
+  <img src="https://media.giphy.com/media/YkkbVZma9gRKU/giphy.gif">>
 
 </ion-content>
