jiham changed stuff

--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -13,7 +13,7 @@
   <h3>Welcome to your first Ionic app!</h3>
 
   <p>
-    This starter project is our way of helping you get a functional app running in record time.
+    This starter project is our way of helping you get a functional app running in record time. JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE JIHAM LEE 
   </p>
   <p>
     Follow along on the tutorial section of *MICHAEL WAS HERE* the Ionic docs!
